<resources>
    <string name="app_name">Penny Pig</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create One</string>
    <string name="signupemail">SignupEmail</string>
    <string name="signuppassword">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="signup_repassword"> Retype Password</string>
    <string name="signuprepassword">Confirm Password</string>
    <string-array name="categories">
        <item>Medicines</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Bills</item>
        <item>Rent</item>
        <item>Grocery</item>
        <item>Other</item>
    </string-array>

    <string-array name="splitAccordingly">
        <item>Equally</item>
        <item>Unequally</item>
    </string-array>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_add">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_subtract">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_multiply">*</string>
    <string name="_0">0</string>
    <string name="_divide">/</string>
    <string name="_equals">=</string>
    <string name="_dot">.</string>

    <string name="expense">$ 0.00</string>
    <string name="income">$ 0.00</string>
    <string name="total_balance">$ 0.00</string>
    <string name="add_income">Add income</string>
    <string name="add_expense">Add expense</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>

    <string name="passbook">Passbook</string>
    <string name="name">Enter Full Name</string>
    <string name="signupname">Full Name</string>
    <string name="dialog_message">Do you want to add income?</string>
    <string name="dialog_title"> Alert </string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
</resources>
