<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Expense">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:text="DATE"
        android:id="@+id/dateTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:text="EXPENSE"
        android:textStyle="bold"
        android:textColor="@color/aqua_blue"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/valueText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="5"
            android:layout_gravity="fill"
            android:background="@color/aqua_blue"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <ImageButton
            android:id="@+id/eraseButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/aqua_blue"
            android:onClick="setValue"
            android:scaleType="fitCenter"
            android:src="@drawable/backspace"
            android:tag="eraseButton" />
    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="50dp"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonExpenseOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseOne"
            android:text="@string/_1"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseTwo"
            android:text="@string/_2"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseThree"
            android:text="@string/_3"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpensePlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpensePlus"
            android:text="@string/_add"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"

            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseFour"
            android:text="@string/_4"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseFive"
            android:text="@string/_5"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseSix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseSix"
            android:text="@string/_6"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseMinus"
            android:text="@string/_subtract"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseSeven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseSeven"
            android:text="@string/_7"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseEight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseEight"
            android:text="@string/_8"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseNine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseNine"
            android:text="@string/_9"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseMultiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseMultiplication"
            android:text="@string/_multiply"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseZero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseZero"
            android:text="@string/_0"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseDot"
            android:text="@string/_dot"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />
        <Button
            android:id="@+id/buttonExpenseDivision"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseDivision"
            android:text="@string/_divide"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonExpenseEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:background="@drawable/try1"
            android:onClick="setValue"
            android:tag="buttonExpenseEquals"
            android:text="@string/_equals"
            android:textColor="@color/aqua_blue"
            android:textSize="25sp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">


    </GridLayout>

    <Button
        android:id="@+id/buttonExpenseCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/try1"
        android:tag="buttonExpenseCategory"
        android:text="SELECT CATEGORY"
        android:textColor="@color/aqua_blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.193"
        tools:layout_editor_absoluteX="-9dp" />

    <Button
        android:id="@+id/buttonExpenseFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/try1"
        android:tag="buttonExpenseEquals"
        android:text="ADD EXPENSE"
        android:textColor="@color/aqua_blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.818"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>