<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="100sp"
        android:layout_height="95sp"
        android:layout_row="0"
        android:layout_column="0"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_marginLeft="5dp"
        app:srcCompat="@drawable/medicine" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="100sp"
        android:layout_height="95sp"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_row="0"
        android:layout_column="1"
        app:srcCompat="@drawable/travel" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="100sp"
        android:layout_height="95sp"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_row="0"
        android:layout_column="2"
        app:srcCompat="@drawable/entertainment" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="100sp"
        android:layout_height="95sp"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_row="0"
        android:layout_column="3"
        app:srcCompat="@drawable/bills" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="100sp"
        android:layout_height="95sp"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginLeft="5dp"
        app:srcCompat="@drawable/rent" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="100sp"
        android:layout_height="95sp"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@drawable/others" />

    <TextView
        android:id="@+id/expense_textview"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/income"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="10pt"/>

    <TextView
        android:id="@+id/income_textview"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_marginTop="20dp"

        android:gravity="center"
        android:text="@string/expense"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:textSize="10pt"/>

    <TextView
        android:id="@+id/total_amount_textview"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_columnSpan="3"
        android:layout_rowSpan="3"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:gravity="center"
        android:text="@string/total_balance"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="15pt"
        android:background="@drawable/try1"
        />

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="10dp"
        android:background="@drawable/try1"
        android:layout_marginLeft="5dp"
        android:text="@string/add_expense"
        android:textColor="@android:color/holo_red_dark"/>

    <Button
        android:id="@+id/add_income_button"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/add_income"
        android:background="@drawable/try1"
        android:textColor="@android:color/holo_green_dark"/>

    <Button
        android:id="@+id/temp_split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:text="Button" />

</GridLayout>


